# m3u8-reader

./: Cargo.toml  iframes.m3u8  master.m3u8  variant.m3u8
src/: error.rs  lib.rs  media_playlist.rs  multi_variant.rs
