[package]
name = "m3u8-reader"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/kaorlol/m3u8-reader"
description = "This isn't production ready, but it works for my use case."
license = "MIT"
include = [
	"**/*.rs",
	"Cargo.toml",
]

[dependencies]
memchr = "2.7.4"
thiserror = "2.0.11"
