[package]
name = "m3u8-reader"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/kaorlol/m3u8-reader"
description = "This isn't production ready, but it works for my use case."
license = "MIT"
include = [
	"**/*.rs",
	"Cargo.toml",
]

[dependencies]
lexical = "7.0.4"
logos = "0.15.0"
thiserror = "2.0.11"
